syntax = "proto3";

package cardapio.def.v1;

enum Categoria {
    CATEGORIA_UNSPECIFIED = 0;
    CATEGORIA_LANCHE = 1;
    CATEGORIA_ACOMPANHAMENTO = 2;
    CATEGORIA_BEBIDA = 3;
    CATEGORIA_SOBREMESA = 4;
}

message ItemCardapio {
    string nome = 1;
    string descricao = 2;
    Categoria categoria = 3;
    string preco = 4;
}